Fix viewport width on devices with scrollbar

--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -20,7 +20,6 @@
   box-shadow: inset 0px -5px 5px 0px rgba(0, 0, 0, 0.1);
   background: #f9f9f9;
   color: #222;
-  width: 100vw;
 }
 
 .site-header a {
@@ -257,7 +256,7 @@ figure.code figcaption > a {
   .article-content > table,
   .article-content > figure.code,
   .article-content > .highlight {
-    width: 100vw;
+    width: calc(100% + 2 * var(--content-padding));
     border-radius: 0;
     border-left: none;
     border-right: none;
